--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-main {
-    background-image: linear-gradient(white, #DAE6EE, #D5E6F1);
+* {
+    margin: 0;
+    padding: 0;
 }
 
-ul.barra {
+nav {
+    width: 100%;
+}
+
+nav ul {
     display: flex;
     justify-content: space-between;
     padding: 10px 150px;
@@ -12,14 +17,18 @@ ul.barra {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.barra li {
+nav ul li {
     border-right: 2px solid white;
     padding: 10px;
     padding-right: 90px;
     transition-duration: 0.2s;
 }
 
-.barra li:hover {
+nav ul li.last {
+    border-right: none;
+}
+
+nav ul li:hover {
     color: black;
     transform: scale(1.0);
 }
@@ -40,6 +49,10 @@ a {
 
 .center:hover {
     filter: brightness(150%);
+}
+
+main {
+    background-image: linear-gradient(white, #DAE6EE, #D5E6F1);
 }
 
 .box {
